# epsilonfighter

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.status  configure  configure.ac  configure.in
data/: font1.af
src/: ammo.cpp  ammo.h  animation.cpp  animation.h  audio.cpp  audio.h  bitmask.cpp  bitmask.h  briefing.cpp  briefing.h  camera.cpp  camera.h  defines.h  font.cpp  font.h  fx_explosion.cpp  fx_explosion.h  fx_shield.cpp  fx_shield.h  hud.cpp  hud.h  image.cpp  image.h  includes.h  level.cpp  level.h  log.cpp  log.h  main.cpp  menu.cpp  menu.h  rotate.cpp  rotate.h  ship.cpp  ship.h  sprite.cpp  sprite.h  sprite_list.cpp  sprite_list.h  starfield.cpp  (+14 more)
src/afont/: afont_base.c
src/afont/CVS/: Entries  Repository  Root
src/afont/CVS/RevisionCache/: afont_base.c#1.1.1.1  afont_sdl.c#1.1.1.1
