AM_CXXFLAGS = -I$(top_srcdir)/src/

localdir = $(datadir)/locale
DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@

bin_PROGRAMS = efighter

efighter_SOURCES = src/afont/afont_base.c \
src/afont/afont_sdl.c \
src/ammo.cpp \
src/animation.cpp \
src/audio.cpp \
src/bitmask.cpp \
src/briefing.cpp \
src/camera.cpp \
src/font.cpp \
src/fx_explosion.cpp \
src/fx_shield.cpp \
src/hud.cpp \
src/image.cpp \
src/level.cpp \
src/log.cpp \
src/main.cpp \
src/menu.cpp \
src/rotate.cpp \
src/ship.cpp \
src/sprite_list.cpp \
src/starfield.cpp \
src/timer.cpp \
src/trig.cpp \
src/vector.cpp \
src/video.cpp \
src/weapon.cpp \
src/zoom.cpp

efighter_LDADD =

SUBDIRS=

EXTRA_DIST = 